fix details page menu jump problem

--- a/code/TouchShop/Basic/view/frontend/web/css/basic-warranty.css
+++ b/code/TouchShop/Basic/view/frontend/web/css/basic-warranty.css
@@ -39,8 +39,8 @@
 }
 
 .warranty-back h2 {
-    font-size: 30px;
     position: absolute;
-    top: 80px;
-    right: 600px;
+    top: 90px;
+    right: 480px;
+    font-size: 35px;
 }
