--- a/code/TouchShop/ProductTool/view/frontend/web/css/details.css
+++ b/code/TouchShop/ProductTool/view/frontend/web/css/details.css
@@ -39,7 +39,7 @@
 }
 
 .details-menu {
-    margin: 30px 0;
+    /*margin: 30px 0;*/
 }
 
 .details-menu ul {
