--- a/design/frontend/TouchShop/Peanut/TouchShop_Basic/web/css/owl-overwrite.css
+++ b/design/frontend/TouchShop/Peanut/TouchShop_Basic/web/css/owl-overwrite.css
@@ -103,6 +103,6 @@
     box-shadow: initial;
 }
 
-.owl-img-addon button {
-    
+.owl-img-addon button:hover {
+    background-color: #8d131c;
 }
